--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -4,27 +4,52 @@
     <div id="carouselExampleFade" class="carousel slide carousel-fade">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="assets/img/OUTER-VIEW.jpg" class="d-block w-100" alt="...">
+          <img src="assets/img/Vanavihari-1.jpg" class="d-block w-100" alt="...">
           <div class="carousel-overlay"></div>
           <div class="carousel-caption p-0">
-            <h1 class="display-3">Welcome to Vanavihari</h1>
-            <p></p>
+            <h1 class="display-3">Vanavihari</h1>
+            <p>Vanavihari resort, nestled in Maredumilli, is a haven for eco-tourism enthusiasts. This community-centric guesthouse offers a peaceful escape surrounded by nature. </p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="assets/img/vanavihari-2.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-overlay"></div>
+          <div class="carousel-caption p-0">
+            <h1 class="display-3">Vanavihari</h1>
+            <p>Providing cozy cottages and rooms, it sits within easy reach of Maredumilli Waterfalls, ensuring guests enjoy a tranquil environment.</p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="assets/img/JungleStar-1.jpg" class="d-block w-100" alt="...">
           <div class="carousel-overlay"></div>
           <div class="carousel-caption p-0">
-            <h1 class="display-3">Welcome to Jungle Star</h1>
-            <p></p>
+            <h1 class="display-3">Jungle Star</h1>
+            <p>Jungle Star Eco Camp, managed by the Andhra Pradesh Forest Department, offers seven cottages atop a hillock, reachable only by a bridge. </p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="assets/img/Vanavihari-1.jpg" class="d-block w-100" alt="...">
+          <img src="assets/img/jungle.jpeg" class="d-block w-100" alt="...">
           <div class="carousel-overlay"></div>
           <div class="carousel-caption p-0">
-            <h1 class="display-3">Find yourself lost in deep silence</h1>
-            <p></p>
+            <h1 class="display-3">Jungle Star</h1>
+            <p>This eco-friendly site provides adventure activities like treks and campfires, nestled deep in the unexplored Eastern Ghats.
+            </p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="assets/img/amruthadhara.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-overlay"></div>
+          <div class="carousel-caption p-0">
+            <h1 class="display-3">Amruthadhara Falls</h1>
+            <p>Amruthadhara falls a popular destination for nature lovers, especially during the monsoon season when the falls are at their most spectacular.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="assets/img/Rampa-falls.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-overlay"></div>
+          <div class="carousel-caption p-0">
+            <h1 class="display-3">Rampa Falls</h1>
+            <p>In East Godavari's Agency track, discover Rampa V.S.S nestled in semi-evergreen forests, featuring Neelakanteswara and Rampa waterfalls. </p>
           </div>
         </div>
       </div>
