search bar popup

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,63 +1,114 @@
-
 <app-layout>
   <div class="main">
     <section id="carouselExampleFade" class="carousel slide carousel-fade">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="assets/img/Vanavihari-1.jpg" class="d-block w-100" alt="...">
+          <img
+            src="assets/img/Vanavihari-1.jpg"
+            class="d-block w-100"
+            alt="..."
+          />
           <div class="carousel-overlay"></div>
           <div class="carousel-caption p-0">
             <h1 class="display-3">Vanavihari</h1>
-            <p>Vanavihari resort, nestled in Maredumilli, is a haven for eco-tourism enthusiasts. This community-centric guesthouse offers a peaceful escape surrounded by nature. </p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="assets/img/vanavihari-2.jpg" class="d-block w-100" alt="...">
-          <div class="carousel-overlay"></div>
-          <div class="carousel-caption p-0">
-            <h1 class="display-3">Vanavihari</h1>
-            <p>Providing cozy cottages and rooms, it sits within easy reach of Maredumilli Waterfalls, ensuring guests enjoy a tranquil environment.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="assets/img/JungleStar-1.jpg" class="d-block w-100" alt="...">
-          <div class="carousel-overlay"></div>
-          <div class="carousel-caption p-0">
-            <h1 class="display-3">Jungle Star</h1>
-            <p>Jungle Star Eco Camp, managed by the Andhra Pradesh Forest Department, offers seven cottages atop a hillock, reachable only by a bridge. </p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="assets/img/jungle.jpeg" class="d-block w-100" alt="...">
-          <div class="carousel-overlay"></div>
-          <div class="carousel-caption p-0">
-            <h1 class="display-3">Jungle Star</h1>
-            <p>This eco-friendly site provides adventure activities like treks and campfires, nestled deep in the unexplored Eastern Ghats.
+            <p>
+              Vanavihari resort, nestled in Maredumilli, is a haven for
+              eco-tourism enthusiasts. This community-centric guesthouse offers
+              a peaceful escape surrounded by nature.
             </p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="assets/img/amruthadhara.jpg" class="d-block w-100" alt="...">
+          <img
+            src="assets/img/vanavihari-2.jpg"
+            class="d-block w-100"
+            alt="..."
+          />
           <div class="carousel-overlay"></div>
           <div class="carousel-caption p-0">
-            <h1 class="display-3">Amruthadhara Falls</h1>
-            <p>Amruthadhara falls a popular destination for nature lovers, especially during the monsoon season when the falls are at their most spectacular.</p>
+            <h1 class="display-3">Vanavihari</h1>
+            <p>
+              Providing cozy cottages and rooms, it sits within easy reach of
+              Maredumilli Waterfalls, ensuring guests enjoy a tranquil
+              environment.
+            </p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="assets/img/Rampa-falls.jpg" class="d-block w-100" alt="...">
+          <img
+            src="assets/img/JungleStar-1.jpg"
+            class="d-block w-100"
+            alt="..."
+          />
+          <div class="carousel-overlay"></div>
+          <div class="carousel-caption p-0">
+            <h1 class="display-3">Jungle Star</h1>
+            <p>
+              Jungle Star Eco Camp, managed by the Andhra Pradesh Forest
+              Department, offers seven cottages atop a hillock, reachable only
+              by a bridge.
+            </p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="assets/img/jungle.jpeg" class="d-block w-100" alt="..." />
+          <div class="carousel-overlay"></div>
+          <div class="carousel-caption p-0">
+            <h1 class="display-3">Jungle Star</h1>
+            <p>
+              This eco-friendly site provides adventure activities like treks
+              and campfires, nestled deep in the unexplored Eastern Ghats.
+            </p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            src="assets/img/amruthadhara.jpg"
+            class="d-block w-100"
+            alt="..."
+          />
+          <div class="carousel-overlay"></div>
+          <div class="carousel-caption p-0">
+            <h1 class="display-3">Amruthadhara Falls</h1>
+            <p>
+              Amruthadhara falls a popular destination for nature lovers,
+              especially during the monsoon season when the falls are at their
+              most spectacular.
+            </p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            src="assets/img/Rampa-falls.jpg"
+            class="d-block w-100"
+            alt="..."
+          />
           <div class="carousel-overlay"></div>
           <div class="carousel-caption p-0">
             <h1 class="display-3">Rampa Falls</h1>
-            <p>In East Godavari's Agency track, discover Rampa V.S.S nestled in semi-evergreen forests, featuring Neelakanteswara and Rampa waterfalls. </p>
+            <p>
+              In East Godavari's Agency track, discover Rampa V.S.S nestled in
+              semi-evergreen forests, featuring Neelakanteswara and Rampa
+              waterfalls.
+            </p>
           </div>
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carouselExampleFade"
+        data-bs-slide="prev"
+      >
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
       </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carouselExampleFade"
+        data-bs-slide="next"
+      >
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
@@ -88,43 +139,104 @@
       <div class="container">
         <h2 class="text-center mb-4">Search room avaibility</h2>
         <form>
-          <div class="row align-items-center justify-content-around gap-3 gap-md-0">
+          <div
+            class="row align-items-center justify-content-around gap-3 gap-md-0"
+          >
             <div class="col-md-3">
               <mat-form-field appearance="outline">
                 <mat-label>Select Resort</mat-label>
                 <mat-select required>
-                  <mat-option value="VanaVihari, Maredumilli">Vanavihari, Maredumilli</mat-option>
-                  <mat-option value="Jungle Star, Valamuru">Jungle Star, Valamuru</mat-option>
+                  <mat-option value="VanaVihari, Maredumilli"
+                    >Vanavihari, Maredumilli</mat-option
+                  >
+                  <mat-option value="Jungle Star, Valamuru"
+                    >Jungle Star, Valamuru</mat-option
+                  >
                 </mat-select>
               </mat-form-field>
-              
             </div>
             <div class="col-md-3">
               <mat-form-field appearance="outline">
                 <mat-label>Checkin & Checkout</mat-label>
                 <mat-date-range-input [rangePicker]="picker">
-                  <input matStartDate placeholder="Checkin date">
-                  <input matEndDate placeholder="Checkout date">
+                  <input matStartDate placeholder="Checkin date" />
+                  <input matEndDate placeholder="Checkout date" />
                 </mat-date-range-input>
                 <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
-                <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker-toggle
+                  matIconSuffix
+                  [for]="picker"
+                ></mat-datepicker-toggle>
                 <mat-date-range-picker #picker></mat-date-range-picker>
               </mat-form-field>
-              
-
             </div>
-            <div class="col-md-auto">
+            <div class="col-md-3 position-relative">
               <mat-form-field appearance="outline">
                 <mat-label>Guests</mat-label>
-                <input type="number" matInput placeholder="Choose number of guest(s)">
+                <!-- (click)="openGuestRoomSelect()" -->
+                <input
+                  type="text"
+                  matInput
+                  value="1 adult, 1 room"
+                  data-bs-toggle="modal"
+                  data-bs-target="#modalId"
+                />
               </mat-form-field>
+              <!-- Modal trigger button -->
+              <!-- Modal Body -->
+              <!-- if you want to close by clicking outside the modal, delete the last endpoint:data-bs-backdrop and data-bs-keyboard -->
+              <div
+                class="modal fade"
+                id="modalId"
+                tabindex="-1"
+                data-bs-backdrop="static"
+                data-bs-keyboard="false"
+                role="dialog"
+                aria-labelledby="modalTitleId"
+                aria-hidden="true"
+              >
+                <div
+                  class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-sm"
+                  role="document"
+                >
+                  <div class="modal-content">
+                    <!-- <div class="modal-header">
+                      <h5 class="modal-title" id="modalTitleId">
+                        Modal title
+                      </h5>
+                      <button
+                        type="button"
+                        class="btn-close"
+                        data-bs-dismiss="modal"
+                        aria-label="Close"
+                      ></button>
+                    </div> -->
+                    <div class="modal-body">
+                      <!-- mat form field for adults, children, rooms -->
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-primary">
+                        Done
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Optional: Place to the bottom of scripts -->
+              <script>
+                const myModal = new bootstrap.Modal(
+                  document.getElementById("modalId"),
+                  options
+                );
+              </script>
             </div>
-            <div class="col-md-auto">
+            <!-- <div class="col-md-auto">
               <mat-form-field appearance="outline">
                 <mat-label>Rooms</mat-label>
                 <input type="number" matInput placeholder="Choose number of Rooms">
               </mat-form-field>
-            </div>
+            </div> -->
             <div class="col-auto">
               <button mat-raised-button color="primary">Search</button>
             </div>
@@ -142,16 +254,17 @@
         <h2 class="text-center">Vanavihari, Maredumilli</h2>
         <div class="row">
           <div class="col-md-3">
-            <img src="assets/img/vanavihari_logo.png" alt="vanavihari_logo">
+            <img src="assets/img/vanavihari_logo.png" alt="vanavihari_logo" />
           </div>
           <div class="col-md-9">
             <p>
               Vanavihari resort, nestled in Maredumilli, is a haven for
-              eco-tourism enthusiasts. This community-centric guesthouse offers a
-              peaceful escape surrounded by nature. Providing cozy cottages and
-              rooms, it sits within easy reach of Maredumilli Waterfalls, ensuring
-              guests enjoy a tranquil environment. Delight in breakfast and dinner
-              offerings, along with a relaxing stay at this charming retreat.
+              eco-tourism enthusiasts. This community-centric guesthouse offers
+              a peaceful escape surrounded by nature. Providing cozy cottages
+              and rooms, it sits within easy reach of Maredumilli Waterfalls,
+              ensuring guests enjoy a tranquil environment. Delight in breakfast
+              and dinner offerings, along with a relaxing stay at this charming
+              retreat.
             </p>
           </div>
         </div>
@@ -159,19 +272,20 @@
         <div class="row">
           <div class="col-md-7">
             <!-- masonry gallery -->
-            
           </div>
         </div>
-
       </div>
-
     </section>
     <div class="container mt-5">
       <div class="row">
         <!-- Left Column - Displaying Paragraph -->
         <div class="col-md-6">
           <h3>Vanavihari</h3>
-          <img class="image-fluid mb-3" style="height: 200px; width: 300px" src="assets/img/OUTER.jpg" />
+          <img
+            class="image-fluid mb-3"
+            style="height: 200px; width: 300px"
+            src="assets/img/OUTER.jpg"
+          />
           <p>
             Vanavihari resort, nestled in Maredumilli, is a haven for
             eco-tourism enthusiasts. This community-centric guesthouse offers a
@@ -185,8 +299,13 @@
           <div class="embed-responsive embed-responsive-16by9">
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2096.9750517228763!2d81.70766415859167!3d17.600715928141202!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a373b5d52758873%3A0x718f2b2059db5e0a!2sVanavihari%20Maredumilli!5e0!3m2!1sen!2sin!4v1706798767875!5m2!1sen!2sin"
-              width="100%" height="450" style="border: 0" allowfullscreen="" loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade">
+              width="100%"
+              height="450"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            >
             </iframe>
           </div>
         </div>
@@ -201,19 +320,33 @@
             </p>
             <div class="row justify-content-between gap-3">
               <div class="col-md-3">
-                <img data-bs-toggle="modal" data-bs-target="#modalR1" src="assets/img/Vanavihari-1.jpg"
-                  alt="Vanavihari Resort Photo" class="img-fluid rounded mb-3" />
+                <img
+                  data-bs-toggle="modal"
+                  data-bs-target="#modalR1"
+                  src="assets/img/Vanavihari-1.jpg"
+                  alt="Vanavihari Resort Photo"
+                  class="img-fluid rounded mb-3"
+                />
               </div>
               <div class="col-md-3">
                 <iframe
                   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2096.9750517228763!2d81.70766415859167!3d17.600715928141202!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a373b5d52758873%3A0x718f2b2059db5e0a!2sVanavihari%20Maredumilli!5e0!3m2!1sen!2sin!4v1706798767875!5m2!1sen!2sin"
-                  width="100%" height="300" frameborder="0" style="border: 0" allowfullscreen="" aria-hidden="false"
-                  tabindex="0"></iframe>
+                  width="100%"
+                  height="300"
+                  frameborder="0"
+                  style="border: 0"
+                  allowfullscreen=""
+                  aria-hidden="false"
+                  tabindex="0"
+                ></iframe>
               </div>
               <div class="col-md-3">
                 <h3>Maredumilli Waterfalls</h3>
-                <img src="assets/img/MAREDUMILLI-waterfalls.jpg" alt="Maredumilli Waterfalls Photo"
-                  class="img-fluid rounded mb-3" />
+                <img
+                  src="assets/img/MAREDUMILLI-waterfalls.jpg"
+                  alt="Maredumilli Waterfalls Photo"
+                  class="img-fluid rounded mb-3"
+                />
                 <!-- <iframe
                             src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15212.370538782081!2d81.7135475!3d17.5983355!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a373b6778f7243b%3A0xe93daabd3f7d567d!2sMaredumilli%20Water%20Falls!5e0!3m2!1sen!2sin!4v1707058999843!5m2!1sen!2sin"
                             width="400" height="300" frameborder="0" style="border:0;" allowfullscreen=""
