--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -37,16 +37,7 @@
         <span class="visually-hidden">Next</span>
       </button>
     </section>
-    <!-- <section class="banner d-grid align-items-center"> 
-      <div class="banner-content">
-        <h1 class="display-4 text-center text-white">
-          Welcome to Vanavihari
-        </h1>
-        <h3 class="text-center text-white">
-          A Community Based Eco-Tourism, Maredumilli
-        </h3>
-      </div>
-    </section> -->
+    
     <section class="intro py-5">
       <div class="container">
         <p class="text-center border border-1 mb-0">
@@ -112,96 +103,51 @@
       </div>
     </section>
     <!-- section for resorts -->
-    <section class="resorts">
-      <div class="vanavihari container">
-        <h2 class="text-center">Vanavihari, Maredumilli</h2>
-        <div class="row">
-          <div class="col-md-3">
-            <img src="assets/img/vanavihari_logo.png" alt="vanavihari_logo">
-          </div>
-          <div class="col-md-9">
-            <p>
-              Vanavihari resort, nestled in Maredumilli, is a haven for
-              eco-tourism enthusiasts. This community-centric guesthouse offers a
-              peaceful escape surrounded by nature. Providing cozy cottages and
-              rooms, it sits within easy reach of Maredumilli Waterfalls, ensuring
-              guests enjoy a tranquil environment. Delight in breakfast and dinner
-              offerings, along with a relaxing stay at this charming retreat.
-            </p>
-          </div>
-        </div>
-        <!-- gallery and map -->
-        <div class="row">
-          <div class="col-md-7">
-            <!-- masonry gallery -->
-            
-          </div>
-        </div>
-
-      </div>
-
-    </section>
-    <div class="container mt-5">
-      <div class="row">
-        <!-- Left Column - Displaying Paragraph -->
-        <div class="col-md-6">
-          <h3>Vanavihari</h3>
-          <img class="image-fluid mb-3" style="height: 200px; width: 300px" src="assets/img/OUTER.jpg" />
-          <p>
-            Vanavihari resort, nestled in Maredumilli, is a haven for
-            eco-tourism enthusiasts. This community-centric guesthouse offers a
-            peaceful escape surrounded by nature. Providing cozy cottages and
-            rooms, it sits within easy reach of Maredumilli Waterfalls, ensuring
-            guests enjoy a tranquil environment. Delight in breakfast and dinner
-            offerings, along with a relaxing stay at this charming retreat.
-          </p>
-        </div>
-        <div class="col-md-6">
-          <div class="embed-responsive embed-responsive-16by9">
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2096.9750517228763!2d81.70766415859167!3d17.600715928141202!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a373b5d52758873%3A0x718f2b2059db5e0a!2sVanavihari%20Maredumilli!5e0!3m2!1sen!2sin!4v1706798767875!5m2!1sen!2sin"
-              width="100%" height="450" style="border: 0" allowfullscreen="" loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
-          </div>
-        </div>
-        <section class="container py-5">
-          <div class="container">
-            <h2 class="text-center mb-5">VANAVIHARI, Maredumilli</h2>
-            <p class="mb-5">
-              Vanavihari resort in Maredumilli is an eco-tourism haven. The
-              community-centric guesthouse offers cozy cottages and rooms,
-              surrounded by nature and near Maredumilli Waterfalls. Guests enjoy
-              peaceful escapes with breakfast and dinner included.
-            </p>
-            <div class="row justify-content-between gap-3">
-              <div class="col-md-3">
-                <img data-bs-toggle="modal" data-bs-target="#modalR1" src="assets/img/Vanavihari-1.jpg"
-                  alt="Vanavihari Resort Photo" class="img-fluid rounded mb-3" />
-              </div>
-              <div class="col-md-3">
-                <iframe
-                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2096.9750517228763!2d81.70766415859167!3d17.600715928141202!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a373b5d52758873%3A0x718f2b2059db5e0a!2sVanavihari%20Maredumilli!5e0!3m2!1sen!2sin!4v1706798767875!5m2!1sen!2sin"
-                  width="100%" height="300" frameborder="0" style="border: 0" allowfullscreen="" aria-hidden="false"
-                  tabindex="0"></iframe>
-              </div>
-              <div class="col-md-3">
-                <h3>Maredumilli Waterfalls</h3>
-                <img src="assets/img/MAREDUMILLI-waterfalls.jpg" alt="Maredumilli Waterfalls Photo"
-                  class="img-fluid rounded mb-3" />
-                <!-- <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15212.370538782081!2d81.7135475!3d17.5983355!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a373b6778f7243b%3A0xe93daabd3f7d567d!2sMaredumilli%20Water%20Falls!5e0!3m2!1sen!2sin!4v1707058999843!5m2!1sen!2sin"
-                            width="400" height="300" frameborder="0" style="border:0;" allowfullscreen=""
-                            aria-hidden="false" tabindex="0"></iframe> -->
-                <p>
-                  A scenic waterfall surrounded by lush greenery. It is a
-                  popular spot for swimming and picnicking.
-                </p>
+    <!-- bootstrap 5 cards  -->
+     
+    <section class="resorts-intro">
+      <div class="container">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <div class="card d-lg-flex">
+              <img src="assets/img/vanavihari_logo.png" class="card-img-top" alt="Card image cap">
+      
+              <div class="card-body">
+                <h5 class="card-title">Vanavihari, Maredumilli</h5>
+                <p class="card-text">Vanavihari resort, nestled in Maredumilli, is a haven for
+                  eco-tourism enthusiasts. This community-centric guesthouse offers a
+                  peaceful escape surrounded by nature. Providing cozy cottages and
+                  rooms, it sits within easy reach of Maredumilli Waterfalls, ensuring
+                  guests enjoy a tranquil environment. Delight in breakfast and dinner
+                  offerings, along with a relaxing stay at this charming retreat.</p>
+                <!-- <a href="#" class="btn btn-primary">Action</a> -->
+                <button mat-raised-button color="primary">View details</button>
+      
               </div>
             </div>
           </div>
-        </section>
+          <div class="col-md-4">
+            <div class="card d-lg-flex">
+              <img src="assets/img/vanavihari_logo.png" class="card-img-top" alt="Card image cap">
+      
+              <div class="card-body">
+                <h5 class="card-title">Vanavihari, Maredumilli</h5>
+                <p class="card-text">Vanavihari resort, nestled in Maredumilli, is a haven for
+                  eco-tourism enthusiasts. This community-centric guesthouse offers a
+                  peaceful escape surrounded by nature. Providing cozy cottages and
+                  rooms, it sits within easy reach of Maredumilli Waterfalls, ensuring
+                  guests enjoy a tranquil environment. Delight in breakfast and dinner
+                  offerings, along with a relaxing stay at this charming retreat.</p>
+                <!-- <a href="#" class="btn btn-primary">Action</a> -->
+                <button mat-raised-button color="primary">View details</button>
+      
+              </div>
+            </div>
+          </div>
+      
+          </div>
       </div>
-    </div>
+    </section>
+ 
   </div>
 </app-layout>
