--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -4,7 +4,7 @@
       <button class="navbar-toggler" type="button" (click)="toggleSidebar()">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand me-auto" href="#">
+      <a class="navbar-brand ms-auto ms-md-0 me-lg-auto" href="#">
         <img src="assets/img/vanavihari_logo.png" alt="vanavihari_logo">
       </a>
       <ul class="navbar-nav d-none d-lg-flex flex-lg-row gap-3">
