--- a/src/app/modules/about-vanavihari/about-vanavihari.component.html
+++ b/src/app/modules/about-vanavihari/about-vanavihari.component.html
@@ -1,16 +1,15 @@
 <app-layout>
     <div class="main">
         <section class="about-banner d-grid place-content-center">
-            <h1 class="text-center">About Vanavihari</h1>
+            <h1 class="text-center text-light display-3">About Vanavihari</h1>
         </section>
-        <section class="about-content">
+        <section class="about-content my-5">
            <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
                     <p>
                         <!-- about us content -->
-                        <br>
-                        Vana Vihari is an initiative of the Government of Andhra Pradesh through its Forest Department and is owned by the Andhra Pradesh Forest Department, maintained by CBET, Maredumilli. 
+                        Vanavihari is an initiative of the Government of Andhra Pradesh through its Forest Department and is owned by the Andhra Pradesh Forest Department, maintained by CBET, Maredumilli. 
                         Vana Vihari is initiated by the Andhra Pradesh Forest Department, by the forest policies of both the state and the union government of India. 
                         Its purpose is to provide financial benefits and empowerment to local communities, promote responsible tourism to natural areas, and create a sustainable, equitable, community-based endeavour to improve the living standards of indigenous host communities.
                          The goal is also to instil the essence of conservation of wild resources among the general public while offering the best possible experience to nature-loving tourists.<br><br>
@@ -29,65 +28,7 @@
             </div>
            </div>
         </section>
-        <section class="tribal-community">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8">
-                        <h2>Tribal Community</h2>
-                        <!-- masonry gallery static 10 images-->
-                        <div class="grid-wrapper">
-                            <div>
-                                <img src="/assets/img/tribal/1.jpg" alt="tribal image 1" />
-                            </div>
-                            <div>
-                                <img src="/assets/img/tribal/2.jpg" alt="tribal image 2" />
-                            </div>
-                            <div class="tall">
-                                <img src="/assets/img/tribal/3.jpg" alt="tribal image 3">
-                            </div>
-                            <div class="wide">
-                                <img src="/assets/img/tribal/4.jpg" alt="tribal image 4" />
-                            </div>
-                            <div class="wide">
-                                <img src="/assets/img/tribal/5.jpg" alt="tribal image 5" />
-                            </div>
-                            <div class="tall">
-                                <img src="/assets/img/tribal/6.jpg" alt="tribal image 6" />
-                            </div>
-                            <div class="big">
-                                <img src="/assets/img/tribal/7.jpg" alt="tribal image 7" />
-                            </div>
-                            <div class="tall">
-                                <img src="/assets/img/tribal/8.jpg" alt="tribal image 8" />
-                            </div>
-                            <div class="wide">
-                                <img src="/assets/img/tribal/10.jpg" alt="tribal image 9" />
-                            </div>
-                            
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <h2>
-                            <!-- Konda reddy tribals -->Konda Reddi
-                        </h2>
-                        <p>
-                            <!-- 3 lines -->
-                            Konda Reddis inhabit the banks on either side of the Godavari River in the hilly and forested regions of East and West Godavari, and Khammam districts of Andhra Pradesh. Their mother tongue is Telugu.
-
-                        </p>
-                        <h2>
-                            <!-- Valmiki tribals -->Valmiki
-                        </h2>
-                        <p>
-                            <!-- 3 lines -->
-                            Valmikis living in the Agency tracts of Andhra Pradesh are the only group recognized as Scheduled Tribes, primarily found in the agency areas of Visakhapatnam and East Godavari districts. Claiming descent from the sage Valmiki, the author of the Ramayana, the Valmiki tribe is divided into various 'gotrams' to regulate marriage institutions in Visakhapatnam tribal areas.
-
-
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </section>
+        
         <section class="our-approach">
 
         </section>
