--- a/src/app/modules/about-vanavihari/about-vanavihari.component.scss
+++ b/src/app/modules/about-vanavihari/about-vanavihari.component.scss
@@ -1,51 +1,7 @@
-.about-banner{
-    background-color: lightgreen;
-    min-height: 50vh;
-    background-image: url("/assets/img/OUTER.jpg");
+.about-banner {
+	min-height: 70vh;
+	background: rgba(0, 0, 0, 0.5) url("/assets/img/OUTER.jpg") fixed no-repeat center/cover;
+	background-blend-mode: overlay;
 
-}
-p{
-    text-align: justify;
-}
-.tribal-community{
-    margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-}
-img {
-	max-width: 100%;
-	height: auto;
-	vertical-align: middle;
-	display: inline-block;
-}
 
-/* Main CSS */
-.grid-wrapper > div {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-.grid-wrapper > div > img {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-	border-radius: 5px;
-}
-
-.grid-wrapper {
-	display: grid;
-	grid-gap: 10px;
-	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-	grid-auto-rows: 200px;
-	grid-auto-flow: dense;
-}
-.grid-wrapper .wide {
-	grid-column: span 2;
-}
-.grid-wrapper .tall {
-	grid-row: span 2;
-}
-.grid-wrapper .big {
-	grid-column: span 2;
-	grid-row: span 2;
 }
