resort intro cards

--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -26,6 +26,12 @@
     }
   }
 }
+.resort-intro{
+  .card{
+    background-color: green;
+    color:#fff
+  }
+}
 .modal-searchbar{
     height: fit-content;
     top: 50%;
