--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -96,6 +96,31 @@
         </p>
       </div>
     </section>
+    <section class="resort-intro my-5 py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="card" style="box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);">
+              <img src="assets/img/Vanavihari-reception.jpg" class="card-img-top" alt="Vanavihari, Maredumilli">
+              <div class="card-body text-center">
+                <h5 class="card-title">Vanavihari, Maredumilli</h5>
+                <p class="card-text">Vanavihari resort, nestled in Maredumilli, is a haven for eco-tourism enthusiasts. This community-centric guesthouse offers a peaceful escape surrounded by nature. Providing cozy cottages and rooms, it sits within easy reach of Maredumilli Waterfalls, ensuring guests enjoy a tranquil environment. Delight in breakfast and dinner offerings, along with a relaxing stay at this charming retreat.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card" style="box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);">
+              <img src="assets/img/Jungle_Star-reception.jpg" class="card-img-top" alt="Jungle Star, Valamuru">
+              <div class="card-body text-center">
+                <h5 class="card-title">Jungle Star, Valamuru</h5>
+                <p class="card-text">Jungle Star Eco Camp presents a distinctive island-like setting, featuring seven cottages perched on a hillock and accessed solely by a bridge. Administered by the Andhra Pradesh Forest Department, it offers an eco-friendly adventure with thrilling options such as treks and campfires. Nestled deep within the uncharted Eastern Ghats, Jungle Star camping site promises a one-of-a-kind overnight experience amidst nature.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+    </section>
     <section class="search-rooms py-5">
       <div class="container">
         <h2 class="text-center mb-4">Search room avaibility</h2>
