--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -1,44 +1,52 @@
-#carouselExampleFade{
+#carouselExampleFade {
   .carousel-item {
-      transition: all 3s ease-in-out;
-      .carousel-overlay{
-              position: absolute;
-              inset: 0;
-              background-color: rgba(0, 0, 0, 0.4);
-              width: 100%;
-              height: 100%;
-      }
-      img {
-          object-fit: cover;
-          /* Or "contain" */
-          height: 100dvh;
-      }
-      .carousel-caption{
-        bottom: 5%;
-      }
-      .active {
-        transform: scale(1.1);
-        /* Zoom in on active slide */
+    transition: all 3s ease-in-out;
+
+    .carousel-overlay {
+      position: absolute;
+      inset: 0;
+      background-color: rgba(0, 0, 0, 0.4);
+      width: 100%;
+      height: 100%;
     }
-    .prev,.next {
-        transform: scale(0.9);
-        /* Shrink inactive slides */
+
+    img {
+      object-fit: cover;
+      /* Or "contain" */
+      height: 100dvh;
+    }
+
+    .carousel-caption {
+      bottom: 5%;
+    }
+
+    &.active {
+      transform: scale(1.1);
+      /* Zoom in on active slide */
+    }
+
+    &.prev,
+    &.next {
+      transform: scale(0.9);
+      /* Shrink inactive slides */
     }
   }
 }
-.resort-intro{
-  .card{
-    background-color: green;
-    color:#fff
-  }
-}
-.modal-searchbar{
-    height: fit-content;
-    top: 50%;
-    left: 10px;
-}
-.modal-dialog{
-    box-shadow: 0 1px 3px rgb(0, 128, 0);
 
+.resort-intro {
+  // .card {
+  //   background-color: rgb(44, 16, 16);
+  //   color: #fff
+  // }
 }
 
+.modal-searchbar {
+  height: fit-content;
+  top: 50%;
+  left: 10px;
+}
+
+.modal-dialog {
+  box-shadow: 0 1px 3px rgb(0, 128, 0);
+
+}
