--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -18,7 +18,7 @@
 }
 .mdc-button{
     height: fit-content!important;
-    border-radius: 100px!important;
+    // border-radius: 100px!important;
     font-size: 0.9rem!important;
     padding: 0.5em 2em!important;
 }
