--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 @use "./scss/base/" as *;
 @use "./scss/components/" as *;
-// html {
-//     // font-size: 14px;
-//     // @media(min-width:600px) {
-//     //     font-size: 16px;
-//     // }
-// }
+html {
+    font-size: 15px;
+    @media(min-width:600px) {
+        font-size: 14px;
+    }
+}
 body {
   // font-size: 0.875rem;
   // background-color: $clr-light;
